edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___9.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="adhikāra_1_dpd">adhikāra 1</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>adhikāro</span></td></tr><tr><td>Grammar</td><td><span>m, gram, from adhikaroti</span></td></tr><tr><td>English</td><td><span><strong>governing rule which affects those that follow</strong></span></td></tr><tr><td></td><td><span>lit. LM10</span></td></tr><tr><td>Root</td><td><span>0<sup>0</sup>0 o (0)</span></td></tr><tr><td></td><td><span>RiC10 in comps</span></td></tr><tr><td>Construction</td><td><span>adhi + √kar > kār + *a</span></td></tr><tr><td>Derivative</td><td><span>kitaka (*a)</span></td></tr><tr><td>Sanskrit</td><td><span><i>adhikāra</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>0</i>&nbsp;cl. 9</span></td></tr></tbody>
    </table>
    <br /><span><b>adhikāre</b> maṅgale c'eva, nipphanne c'āvadhāraṇe,<br/>anantare c'apādāne, athasaddo pavattati.</span><br /><span class="sutta-source-dpd"><i>kaccāyana ākhyātakappa, paṭhamakaṇḍa</i></span><br /><br /><span>kāle'icc'etaṃ <b>adhikār</b>'atthaṃ veditabbaṃ.</span><br /><span class="sutta-source-dpd"><i>kaccāyana ākhyātakappa 413</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
[ITABLE: adhikāra 1]
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

